@@ -37,9 +37,9 @@ import hudson.util.FormValidation;
 import java.io.File;
 import java.io.IOException;
 import java.net.HttpURLConnection;
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
@@ -83,8 +83,14 @@ public class ZipExtractionInstaller extends ToolInstaller {
     @Override
     public FilePath performInstallation(ToolInstallation tool, Node node, TaskListener log) throws IOException, InterruptedException {
         FilePath dir = preferredLocation(tool, node);
-        if (dir.installIfNecessaryFrom(new URL(url), log, "Unpacking " + url + " to " + dir + " on " + node.getDisplayName())) {
-            dir.act(new ChmodRecAPlusX());
+        try {
+            if (dir.installIfNecessaryFrom(new URI(url).toURL(), log, "Unpacking " + url + " to " + dir + " on " + node.getDisplayName())) {
+                dir.act(new ChmodRecAPlusX());
+            }
+        } catch (URISyntaxException e) {
+            MalformedURLException mex = new MalformedURLException(e.getMessage());
+            mex.initCause(e);
+            throw mex;
         }
         if (subdir == null) {
             return dir;
